<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        app:showAsAction="never"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/action_history"
        android:title="@string/history"
        app:showAsAction="never"
        android:icon="@drawable/ic_history"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="never"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="4"/>

</menu>