<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/other_services_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_services"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/services_card"/>

    <ImageButton
        android:id="@+id/more_btn"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_more"
        app:layout_constraintTop_toTopOf="@+id/other_services_tv"
        app:layout_constraintBottom_toBottomOf="@+id/other_services_tv"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/services_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="10dp"
        android:divider="@android:color/transparent"
        android:clipToPadding="false"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintStart_toStartOf="@+id/other_services_tv"
        app:layout_constraintTop_toBottomOf="@+id/other_services_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/more_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/heart_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/sharjah_news_layout"
                app:layout_constraintTop_toTopOf="@+id/main_layout"
                app:layout_constraintStart_toStartOf="@+id/main_layout"
                app:layout_constraintBottom_toBottomOf="@+id/main_layout">

                <ImageView
                    android:id="@+id/utility_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_utility_bill"/>

                <TextView
                    android:id="@+id/utility_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/utility"
                    android:layout_gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sharjah_news_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/medicine_layout"
                app:layout_constraintTop_toTopOf="@+id/heart_layout"
                app:layout_constraintStart_toEndOf="@+id/heart_layout"
                app:layout_constraintBottom_toBottomOf="@+id/heart_layout">

                <ImageView
                    android:id="@+id/sharjah_news_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_sharjah_news"/>

                <TextView
                    android:id="@+id/vehicle_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle"
                    android:layout_gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicine_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@+id/sharjah_news_layout"
                app:layout_constraintStart_toEndOf="@+id/sharjah_news_layout"
                app:layout_constraintBottom_toBottomOf="@+id/sharjah_news_layout"
                app:layout_constraintEnd_toStartOf="@+id/sharjah_library_layout">

                <ImageView
                    android:id="@+id/medicine_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_medicine"/>

                <TextView
                    android:id="@+id/medicine_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine"
                    android:layout_gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sharjah_library_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@+id/medicine_layout"
                app:layout_constraintStart_toEndOf="@+id/medicine_layout"
                app:layout_constraintBottom_toBottomOf="@+id/medicine_layout"
                app:layout_constraintEnd_toEndOf="@+id/main_layout">

                <ImageView
                    android:id="@+id/sharjah_library_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_sharjah_library"/>

                <TextView
                    android:id="@+id/sharjah_library_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharjah_library"
                    android:layout_gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
