<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/govt_services_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/govt_services_tv"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/services_card"/>

    <ImageButton
        android:id="@+id/more_btn"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_more"
        app:layout_constraintTop_toTopOf="@id/govt_services_tv"
        app:layout_constraintBottom_toBottomOf="@id/govt_services_tv"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/services_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="10dp"
        android:divider="@android:color/transparent"
        android:clipToPadding="false"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintStart_toStartOf="@+id/govt_services_tv"
        app:layout_constraintTop_toBottomOf="@+id/govt_services_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/more_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/govt_job_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/vehicle_layout"
                app:layout_constraintTop_toTopOf="@+id/main_layout"
                app:layout_constraintStart_toStartOf="@+id/main_layout"
                app:layout_constraintBottom_toBottomOf="@+id/main_layout">

                <ImageView
                    android:id="@+id/govt_job_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_govt_job"/>

                <TextView
                    android:id="@+id/govt_job_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/govt_job"
                    android:layout_gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicle_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toStartOf="@+id/property_layout"
                app:layout_constraintTop_toTopOf="@+id/govt_job_layout"
                app:layout_constraintStart_toEndOf="@+id/govt_job_layout"
                app:layout_constraintBottom_toBottomOf="@+id/govt_job_layout">

                <ImageView
                    android:id="@+id/vehicle_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_vehicle"/>

                <TextView
                    android:id="@+id/vehicle_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle"
                    android:layout_gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/property_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@+id/vehicle_layout"
                app:layout_constraintStart_toEndOf="@+id/vehicle_layout"
                app:layout_constraintBottom_toBottomOf="@+id/vehicle_layout"
                app:layout_constraintEnd_toStartOf="@+id/media_layout">

                <ImageView
                    android:id="@+id/property_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_property"/>

                <TextView
                    android:id="@+id/property_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property"
                    android:layout_gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/media_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@+id/property_layout"
                app:layout_constraintStart_toEndOf="@+id/property_layout"
                app:layout_constraintBottom_toBottomOf="@+id/property_layout"
                app:layout_constraintEnd_toEndOf="@+id/main_layout">

                <ImageView
                    android:id="@+id/media_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_media"/>

                <TextView
                    android:id="@+id/media_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media"
                    android:layout_gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
