<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/payment_history_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_history_label"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_scrollView"/>

    <ImageButton
        android:id="@+id/more_btn"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_more"
        app:layout_constraintTop_toTopOf="@id/payment_history_tv"
        app:layout_constraintBottom_toBottomOf="@id/payment_history_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <HorizontalScrollView
        android:id="@+id/horizontal_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/payment_history_tv"
        app:layout_constraintTop_toBottomOf="@id/payment_history_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none">

            <!-- CardView -->
            <androidx.cardview.widget.CardView
                android:id="@+id/payment_history_card1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                android:divider="@android:color/transparent"
                android:clipToPadding="false"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/payment_history_icon1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_dollar_blue"/>

                    <TextView
                        android:id="@+id/payment_history1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_history"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- CardView -->
            <androidx.cardview.widget.CardView
                android:id="@+id/payment_history_card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                android:divider="@android:color/transparent"
                android:clipToPadding="false"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/payment_history_icon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_dollar_red"/>

                    <TextView
                        android:id="@+id/payment_history2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_history"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- CardView -->
            <androidx.cardview.widget.CardView
                android:id="@+id/payment_history_card3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                android:divider="@android:color/transparent"
                android:clipToPadding="false"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/payment_history_icon3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_dollar_green"/>

                    <TextView
                        android:id="@+id/payment_history3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_history"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- CardView -->
            <androidx.cardview.widget.CardView
                android:id="@+id/payment_history_card4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                android:divider="@android:color/transparent"
                android:clipToPadding="false"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/payment_history_icon4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_dollar_orange"/>

                    <TextView
                        android:id="@+id/payment_history4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_history"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>